Remove unused methods